<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn_dadesProf"
        android:layout_height="85dp"
        android:layout_width="85dp"
        app:srcCompat="@drawable/logo_profe"
        android:scaleType="fitCenter"
        android:onClick="consulta_profes"
        android:background="@android:color/transparent"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        />

    <ImageButton
        android:id="@+id/btn_www"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_alignTop="@+id/btn_dadesProf"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="50dp"
        android:background="@android:color/transparent"
        android:onClick="consulta_webs"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo_web" />

    <ImageButton
        android:id="@+id/btn_rrss"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_alignTop="@+id/btn_dadesProf"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="50dp"
        android:background="@android:color/transparent"
        android:onClick="consulta_rrss"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo_rrss" />

    <TextView
        android:id="@+id/txt_consulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/Consulta_dades"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_professors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_dadesProf"
        android:layout_alignLeft="@+id/btn_dadesProf"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="120dp"
        android:text="@string/label_profes"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/label_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_www"
        android:layout_alignLeft="@+id/btn_www"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="120dp"
        android:text="@string/label_webs"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        tools:text="@string/label_webs" />

    <TextView
        android:id="@+id/label_rrss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_rrss"
        android:layout_alignLeft="@+id/btn_rrss"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="120dp"
        android:text="@string/label_rrss"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
</RelativeLayout>
